2013-09-30  Ramon Casero  <rcasero@gmail.com>

	* matlab/VectorWrapper.h: (0.6.2)
	* matlab/VectorWrapper.hxx: (0.5.1)
	* matlab/CgalToolbox/CgalTriFacetArea.cpp: (0.3.1)
	* matlab/CgalToolbox/CgalInSurfaceTriangulation.cpp: (0.4.1)
	* matlab/CgalToolbox/CgalCheckSelfIntersect.cpp: (0.3.2)
	* matlab/CgalToolbox/CgalMeshSegmentation.cpp: (0.1.3)
	* matlab/CgalToolbox/CgalClosestTriFacet.cpp: (0.3.1)
	* matlab/CgalToolbox/CgalFixedAlphaShape3.cpp: (0.3.1)
	* matlab/CgalToolbox/CgalAlphaShape3.cpp: (0.3.1)

	- Remove VectorValueType template from ReadCgalRowVector(), as
	it's not used in reality, but was giving the impression in
	Cgal*.cpp files that it was necessary when calling
	ReadRowVector(). It was also creating the need of unnecessary
	variations in partial specializations in the VectorWrapperCgal()
	macro.

	* matlab/CgalToolbox/CgalMeshSegmentation.cpp: (0.1.2)

	- Fix bug. Actually, it seems that we need to pass the centre of
	the boundary sphere with the offset.

	* matlab/PointsToolbox/bwmesh.m: (0.1.6)

	- Minor. Add a note that this function is superseded by
	cgal_meshseg.

	* matlab/CgalToolbox/CgalMeshSegmentation.cpp: (0.1.1)

	- Fix bug. CGAL internally seems to be ignoring the image
	coordinates offset. Now (1) we DO NOT add the offset when
	computing the boundary sphere's centre and (2) we DO add the
	offset in the X output coordinates.

	* matlab/MatlabImportFilter.hxx: (0.7.3)

	- Fix bug in ReadCgalImageFromMatlab(). We were using a pointer to
	the Matlab input instead of to the image data. When the input is a
	plain array, they are both the same, but when the image is given
	as a scimat struct, they are different. This was causing sefaults
	and Matlab to crash.

	* cpp/src/third-party/CGAL-4.2/CMakeLists.txt: (0.1.2)

	- I had forgotten to commit this file. Now CGAL ImageIO has to be
	linked to, so we add it to the build in CGAL.

2013-09-27  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CgalToolbox/CgalMeshSegmentation.cpp: (0.1.0)